@@ -1,3 +1,5 @@
+- ignore 'mgarepo sync -c' and tell it's deprecated
+
 * 1.10.6
 - s/cooker/cauldron/
   thus fixing some stupid upload errors related to backports
